Splitted view component, extract components, Fix layout, Collapsed links

--- a/frontend/scripts/react-components/tool/basemaps/basemaps.scss
+++ b/frontend/scripts/react-components/tool/basemaps/basemaps.scss
@@ -16,6 +16,7 @@
   }
 
   .basemaps-toggle {
+    display: initial;
     height: 32px;
     width: 32px;
     border: 0;
