--- a/frontend/scripts/react-components/tool/sankey/sankey.scss
+++ b/frontend/scripts/react-components/tool/sankey/sankey.scss
@@ -1,6 +1,23 @@
 @import 'styles/settings';
 
 .c-sankey {
+  height: 100%;
+
+  .sankey-scroll-container {
+    width: 100%;
+    height: 100%;
+
+    &.-detailed {
+      overflow-y: scroll;
+      overflow-x: hidden;
+    }
+
+    .sankey {
+      width: 100%;
+      height: 100%;
+    }
+  }
+
   .sankey-node {
     cursor: pointer;
 
