--- a/frontend/styles/components/tool/map.scss
+++ b/frontend/styles/components/tool/map.scss
@@ -2,6 +2,12 @@
 @import '../../mixins';
 
 .c-map {
+  position: absolute;
+  height: 100%;
+  width: 100%;
+  top: 0;
+  bottom: 0;
+
   border-right: solid 1px rgba($charcoal-grey, .7);
   border-bottom: solid 1px rgba($charcoal-grey, .7);
   transform: translate(0, 0);
@@ -9,10 +15,16 @@
   z-index: $z-base;
 
   > .c-map-leaflet {
+    position: absolute;
+    height: 100%;
+    width: 100%;
+    top: 0;
+    bottom: 0;
     flex: 1 1 100%;
   }
 
   > .c-map-legend {
+    display: initial;
     position: absolute;
     bottom: 20px;
     width: 319px;
@@ -116,6 +128,7 @@
   }
 
   .c-map-attribution {
+    display: initial;
     position: absolute;
     bottom: 0;
     width: 319px;
@@ -148,6 +161,7 @@
     z-index: $z-leaflet-above-panes;
 
     &.-map-layers {
+      display: flex;
       position: absolute;
       top: 0;
       left: 8px;
@@ -197,7 +211,7 @@
     transform: translate(100%, 0);
   }
 
-  &.-map-fullscreen {
+  &.-fullscreen {
     .c-map-legend,
     .c-map-attribution {
       width: $map-width;
@@ -205,7 +219,7 @@
     }
   }
 
-  &.-sankey-fullscreen {
+  &.-minified {
     .c-map-legend,
     .c-map-attribution,
     .leaflet-control-container,
@@ -214,6 +228,13 @@
       display: none;
     }
   }
+
+  &:not(.-minified) {
+    .leaflet-control-container {
+      display: initial;
+    }
+  }
+
 }
 
 .map-warnings {
