--- a/frontend/styles/layouts/l-tool.scss
+++ b/frontend/styles/layouts/l-tool.scss
@@ -11,123 +11,6 @@
     display: flex;
   }
 
-  > .flow-content {
-    position: absolute;
-    top: $nav-height;
-    left: 0;
-    width: calc(100% + #{$layer-map-width});
-    height: calc(100% - #{$nav-height});
-    overflow: hidden;
-
-    transform: translate(-$layer-map-width, 0);
-    transition: transform .15s $ease-in-out-sine, width .15s $ease-in-out-sine;
-    z-index: $z-above;
-
-    > .tool-loading {
-      display: none;
-      position: absolute;
-      width: calc(100% + #{$layer-map-width});
-      height: 100%;
-    }
-
-    &.-map-fullscreen {
-      transform: translate(-376px, 0);
-
-      > .c-sankey,
-      .c-columns-selector-group {
-        left: 96%;
-      }
-    }
-
-    &.-open {
-      width: 100%;
-      transform: translate(0, 0);
-    }
-
-    > .c-map-sidebar {
-      top: 0;
-      width: 376px;
-      height: 100%;
-      overflow-y: auto;
-      background: $background-white;
-      z-index: $z-above;
-    }
-
-    > .c-map {
-      display: flex;
-      left: $layer-map-width;
-      flex-direction: column;
-      width: 320px;
-      height: calc(100% - 62px);
-
-      &.-sankey-fullscreen {
-        width: $map-width-closed;
-      }
-
-      &.-smooth-transition {
-        transition: width .45s $ease-in-out-sine;
-        will-change: width, z-index;
-      }
-    }
-
-    &.-map-fullscreen {
-      > .c-map {
-        width: calc(91% - 265px);
-        z-index: $z-above;
-      }
-    }
-
-    &.-sankey-fullscreen {
-      > .c-map {
-        width: $map-width-closed;
-      }
-    }
-
-    .c-sankey {
-      top: 48px;
-      left: $map-width + $layer-map-width;
-      width: calc(100% - #{$map-width + $layer-map-width + ($sankey-x-margin * 2)});
-      height: calc(100% - 110px);
-      margin-left: $sankey-x-margin + 5px;
-
-      .sankey-scroll-container {
-        width: 100%;
-        height: 100%;
-
-        &.-detailed {
-          overflow-y: scroll;
-          overflow-x: hidden;
-        }
-
-        .sankey {
-          width: 100%;
-          height: 100%;
-        }
-      }
-
-      &.-smooth-transition {
-        transition: left .45s $ease-in-out-sine;
-      }
-    }
-
-    .c-columns-selector-group {
-      top: 9px;
-      left: $map-width + $layer-map-width;
-      transition: left .45s $ease-in-out-sine;
-    }
-
-    &.-sankey-fullscreen {
-      .c-sankey {
-        left: $map-width-closed + $layer-map-width;
-        width: calc(100% - #{$map-width-closed + $layer-map-width + ($sankey-x-margin * 2)});
-      }
-
-      .c-columns-selector-group {
-        left: $map-width-closed + $layer-map-width;
-      }
-    }
-  }
-
   .sankey-veil {
     z-index: $z-above;
     left: $layer-map-width;
